--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="img-container">
-      <img class="image1"src="images/image-1.jpg">
+      <img class="image1"src="image-1.jpg">
     </div>
     <div class="pass-container">      
         <p>Put Some Password First!</p>
