--- a/page3.html
+++ b/page3.html
@@ -13,13 +13,13 @@
   <div class="container">
     
       <video class="video" id="myVideo" controls>
-  <source src="videos/vid1.mp4" type="video/mp4" />
+  <source src="vid1.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>    
     <div class="text">HEHE THIS IS THE END PO. ILOVEU!! <br> <br> SEE THIS? Ganyan tayo dati babe hanggang ngayon ma colet parin.</div>    
   </div>
   <div>
-    <img class="gif" src="images/giphy.gif">
+    <img class="gif" src="giphy.gif">
   </div>
   <div class="button-cont"><button onclick="window.location.href='index.html'" class="return">Return to the home page</button>
   </div>
