--- a/letter.html
+++ b/letter.html
@@ -18,7 +18,7 @@
   </div>
   <button onclick="togglePlay()" id="playBtn">Play</button>
   <audio id="audio" loop>
-    <source src="audio/gone.mp3" type="audio/mpeg" />
+    <source src="gone.mp3" type="audio/mpeg" />
   </audio>
 </div>
 
